syntax = "proto3";
option csharp_namespace = "Grpc";
package Orchestrator;

service OrchestratorService {
    rpc BeginOrdering(BeginOrderingRequest) returns (BeginOrderingResponse) {}
}

message BeginOrderingRequest {
    string item_id = 1;
    int32 quantity = 2;
}

message BeginOrderingResponse {
    string status = 1;
}
 